--- a/Information.html
+++ b/Information.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortfolioBasis</title>
     <link href="websiteStyle.css" rel="stylesheet" />
-    <link href="websiteCode.js" rel="js" />
 </head>
 
 <body class="newBody">
@@ -97,5 +96,5 @@
             </div>
         </footer>
 </body>
-
+<script src="websiteCode.js"></script>
 </html>
